--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,6 @@ $primary: #333;
 $topic-text: rgb(245, 231, 45);
 $text: rgb(248, 237, 237);
 $size: (
-  "small": 12px,
-  "large": 20px,
+  "low": 12px,
+  "high": 20px,
 );
